--- a/options.conf
+++ b/options.conf
@@ -1,3 +1,9 @@
+[package]
+name = stack
+url = https://github.com/commercialhaskell/stack/releases/download/v1.6.3/stack-1.6.3-linux-x86_64.tar.gz
+archives = 
+giturl = https://github.com/commercialhaskell/stack.git
+
 [autospec]
 # build 32 bit libraries
 32bit = false
@@ -5,6 +11,8 @@
 allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
+# this package is trusted enough to automatically update (used by other tools)
+autoupdate = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
@@ -40,5 +48,5 @@ use_clang = false
 # configure build for lto
 use_lto = false
 # require package verification for build
-verify_required = false
+verify_required = true
 
