--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = stack
-url = https://github.com/commercialhaskell/stack/releases/download/v1.6.3/stack-1.6.3-linux-x86_64.tar.gz
+url = https://github.com/commercialhaskell/stack/releases/download/v1.7.1/stack-1.7.1-linux-x86_64.tar.gz
 archives = 
 giturl = https://github.com/commercialhaskell/stack.git
 
@@ -17,6 +17,8 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# this package is a library compatability package and only ships versioned library files
+compat = false
 # set conservative build flags
 conservative_flags = false
 # pass -ffast-math to compiler
@@ -43,6 +45,8 @@ skip_tests = false
 so_to_lib = false
 # configure build for avx2
 use_avx2 = false
+# configure build for avx512
+use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
