stack: Autospec creation for update from version 1.7.1 to version 1.9.1
Adrian Wong (3):
      docs: Super minor typo fix
      fix: Recover from all errors on calling `proc "cabal" --numeric-version`
      docs: Add bugfix description to changelog

Alexey Kotlyarov (8):
      Fix behavior of --no-signature to turn signing off
      Update changelog
      Add an option to set Hackage URL for uploading
      Integration test for uploading
      Test signing failure with broken GPG
      Remove unneeded LICENSE file in the integration test
      Add hackage-base-url to changelog
      Adapt upload integration test for Windows

Andrea Bessi (1):
      removed typo in GUIDE.md ()

Asalle (3):
      Add tarpath command line option
      Add copying tarball to specific dir
      Added tar-files to changelog

Attila Domokos (2):
      Fix wording
      Change 'their' to 'this', it works better

Buck Evan (4):
      get-stack: check deps before sudo
      get-stack: allow users to use sudo carefully
      Update get-stack.sh
      Update get-stack.sh

Chris Allen (3):
      Warning about GHCJS use when constructing a build plan
      Changelog for GHCJS deprecation
      Expanded .gitignore

Chris Done (4):
      Rename tmpDirectory to outputDirectory
      Add ghciDirL lens
      Use the ghciDirL for cabal_macros.h in ghci cmd
      Update ChangeLog.md for stack ghci object caching

Darryl Abbate (1):
      Update Homebrew formula name

David Baynard (2):
      Fix integration test 3942-solver-error-output
      Update to latest lts-11 and nightly resolvers

David Jarvis (1):
      list-dependencies is deprecated

Emanuel Borsboom (30):
      package.yaml: v1.8.0
      get-stack.sh: fix download extensions
      v1.7.2
      etc/dockerfiles: update stack version
      mkdocs.yml: fix 'edit on github' link (fixes #4098)
      mkdocs.yml: edit link edits stable branch
      etc/dockerfiles: add stack-build:lts-12.x
      3942-solver-error-output test: use https URL for repo 

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = stack
-url = https://github.com/commercialhaskell/stack/releases/download/v1.7.1/stack-1.7.1-linux-x86_64.tar.gz
+url = https://github.com/commercialhaskell/stack/releases/download/v1.9.1/stack-1.9.1-linux-x86_64.tar.gz
 archives = 
 giturl = https://github.com/commercialhaskell/stack.git
 
@@ -21,6 +21,8 @@ broken_parallel_build = false
 compat = false
 # set conservative build flags
 conservative_flags = false
+# dev package requires the extras to be installed
+dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
