--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = stack
-url = https://github.com/commercialhaskell/stack/releases/download/v1.9.3/stack-1.9.3-linux-x86_64.tar.gz
+url = https://github.com/commercialhaskell/stack/releases/download/v2.1.3/stack-2.1.3-linux-x86_64.tar.gz
 archives = 
 giturl = https://github.com/commercialhaskell/stack.git
 
@@ -33,6 +33,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
