--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = stack
-url = https://github.com/commercialhaskell/stack/releases/download/v2.7.5/stack-2.7.5-linux-x86_64.tar.gz
+url = https://github.com/commercialhaskell/stack/releases/download/v2.9.3/stack-2.9.3-linux-x86_64.tar.gz
 archives = 
 giturl = https://github.com/commercialhaskell/stack.git
 domain = 
@@ -27,6 +27,8 @@ conservative_flags = false
 dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
+# compile full (traditional) debug info
+full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
 # set flags to smallest -02 flags possible
@@ -35,6 +37,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
